--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,10 @@
   <meta charset="utf-8">
   <title>AngularJS + RequireJS - template</title>
   <link rel="stylesheet" href="style/css/app.css">
+
+    <link rel="stylesheet" href="lib/angular-chart.js/dist/angular-chart.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
 
