--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
 </head>
 <body style="padding-top: 20px; padding-bottom: 20px">
 <div class="container">
